--- a/style.css
+++ b/style.css
@@ -10,9 +10,6 @@ body {
     height: 500px;
     width: 1000px;
     margin-top: 150px;
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
 }
 
 .arrayMembers {
@@ -28,10 +25,8 @@ body {
 
 .options {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     /* justify-content: center; */
-
-    border: 2px solid black;
     height: 200px;
     width: 900px;
     margin-left: auto;
@@ -39,11 +34,8 @@ body {
 }
 
 .deleting {
-    border: 2px solid red;
     margin-left: auto;
     margin-right: auto;
-    /* font-family: Arial, Helvetica, sans-serif; */
-    /* font-size: 15px; */
 }
 
 .idInput {
@@ -53,7 +45,7 @@ body {
     border: none;
     border-radius: 20px;
     box-shadow: 0px 5px 10px rgb(195, 195, 193);
-    
+    margin-top: 50px;
 }
 
 .idInput::placeholder {
@@ -66,11 +58,22 @@ body {
 }
 
 .deleteButton {
+    background-color: rgb(238, 237, 234);
+    height: 30px;
+    width: 100px;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0px 5px 10px rgb(195, 195, 193);
+    cursor: pointer;
+    margin-top: 10px;
+}
 
+.deleteButton:hover {
+    background-color: rgb(216, 215, 213);
+    transition: 0.8s;
 }
 
 .adding {
-    border: 2px solid green;
     margin-left: auto;
     margin-right: auto;
 }
@@ -82,6 +85,7 @@ body {
     border: none;
     border-radius: 20px;
     box-shadow: 0px 5px 10px rgb(195, 195, 193);
+    margin-top: 50px;
 }
 
 .nameInput::placeholder {
@@ -94,5 +98,17 @@ body {
 }
 
 .addButton {
+    background-color: rgb(238, 237, 234);
+    height: 30px;
+    width: 100px;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0px 5px 10px rgb(195, 195, 193);
+    cursor: pointer;
+    margin-top: 10px;
+}
 
+.addButton:hover {
+    background-color: rgb(216, 215, 213);
+    transition: 0.8s;
 }
