--- a/style.css
+++ b/style.css
@@ -21,12 +21,14 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: rgb(70, 70, 68);
+    text-align: center;
 }
 
 .options {
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
     height: 200px;
     width: 900px;
     margin-left: auto;
@@ -54,7 +56,7 @@ body {
 
 .idInput:hover {
     background-color: rgb(255, 255, 255);
-    transition: 0.8s;
+    transition: 0.5s;
 }
 
 .deleteButton {
@@ -66,11 +68,18 @@ body {
     box-shadow: 0px 5px 10px rgb(195, 195, 193);
     cursor: pointer;
     margin-top: 10px;
+    color: rgb(70, 70, 68);
 }
 
 .deleteButton:hover {
     background-color: rgb(216, 215, 213);
-    transition: 0.8s;
+    transition: 0.5s;
+    color: black;
+}
+
+.deleteButton:active {
+    background-color: rgb(204, 203, 202);
+    transform: translateY(2px);
 }
 
 .adding {
@@ -94,7 +103,7 @@ body {
 
 .nameInput:hover {
     background-color: rgb(255, 255, 255);
-    transition: 0.8s;
+    transition: 0.5s;
 }
 
 .addButton {
@@ -106,9 +115,16 @@ body {
     box-shadow: 0px 5px 10px rgb(195, 195, 193);
     cursor: pointer;
     margin-top: 10px;
+    color: rgb(70, 70, 68);
 }
 
 .addButton:hover {
     background-color: rgb(216, 215, 213);
-    transition: 0.8s;
+    transition: 0.5s;
+    color: black;
+}
+
+.addButton:active {
+    background-color: rgb(204, 203, 202);
+    transform: translateY(2px);
 }
